# CPPyModule

./: LICENSE  README.rst
cmake/: CPPyModule.cmake  OpenCVPythonModule.cmake  hdr_parser.py  module.cpp
cmake/src/: module.hpp  utils.hpp
distutils/ccpymodule/: __init__.py  gen2.py  generate_extension.py
distutils/ccpymodule/src/: init_func.cpp.in  module.hpp
example/: CMakeLists.txt  flipping_wrapper.h  test.py
example-cmake/: flipping_wrapper.cpp
example-cmake/some_project/: flipping.cpp
example-distutils/: README.rst  cppymodule  setup.py
example-distutils/some_project/: flipping.h
